# strelka

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOS.txt  architecture.md  defining_new_robots.md  uninstall.sh
control/: CMakeLists.txt
control/WBIC/: CMakeLists.txt
control/WBIC/include/WBIC/Dynamics/: FloatingBaseModel.h  UnitreeA1.h
control/WBIC/include/WBIC/WBC_Ctrl/: WBC_Ctrl.hpp
control/WBIC/src/Dynamics/: FloatingBaseModel.cpp  Quadruped.cpp
control/WBIC/src/WBC/WBIC/: KinWBC.cpp  WBIC.cpp
control/WBIC/src/WBC_Ctrl/: WBC_Ctrl.cpp
control/WBIC/src/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp
control/WBIC/src/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  LinkPosTask.cpp
control/include/control/: A1WbicDynamics.hpp  BodyTrajectoryPlanner.hpp  FootholdPlanner.hpp  LocalPlanner.hpp  MPC.hpp  OldMPC.hpp  WBICCommand.hpp  WholeBodyImpedanceController.hpp  WholeBodyImpulseController.hpp
control/include/control/A1/: A1WBIC.hpp  A1WbicDynamics.hpp  LocalPlanner.hpp
control/include/control/gait/: Gait.hpp  GaitScheduler.hpp  GaitSequencer.hpp
control/src/: BodyTrajectoryPlanner.cpp  FootholdPlanner.cpp  LocalPlanner.cpp  MPC.cpp  OldMPC.cpp  WholeBodyImpedanceController.cpp  WholeBodyImpulseController.cpp
control/src/A1/: A1WBIC.cpp
control/src/gait/: GaitScheduler.cpp  GaitSequencer.cpp
examples/: CMakeLists.txt  lcm_high_command_publisher.cpp  lcm_local_planner.cpp  lcm_state_estimator.cpp  lcm_wbic.cpp
examples/A1/: a1_local_planner.cpp
filters/: CMakeLists.txt
filters/include/filters/: FirstOrderLPF.hpp  MovingWindowFilter3D.hpp
filters/src/: FirstOrderLPF.cpp  MovingWindowFilter3D.cpp
interfaces/: CMakeLists.txt
interfaces/include/interfaces/: GazeboInterface.hpp  QuadrupedInterface.hpp
interfaces/include/interfaces/A1/: A1GazeboInterface.hpp
interfaces/src/: GazeboInterface.cpp
interfaces/src/A1/: A1GazeboInterface.cpp
messages/: CMakeLists.txt  generate_msg_headers.sh
messages/a1_lcm_msgs_rehash/: RobotRawState.hpp
messages/include/messages/: HighLevelCommand.hpp  WBICCommand.hpp
messages/lcm/: external_odometry.lcm  robot_gazebo_state.lcm  robot_high_command.lcm  robot_raw_state.lcm  robot_state.lcm
robots/: CMakeLists.txt
robots/include/robots/: Robot.hpp  UnitreeA1.hpp
robots/include/robots/A1/: UnitreeA1.hpp  constants.hpp  kinematics.hpp
robots/include/robots/A1/control/: A1LocalPlanner.hpp  A1WBIC.hpp
robots/include/robots/A1/interfaces/: A1GazeboInterface.hpp
robots/src/: UnitreeA1.cpp
robots/src/A1/: UnitreeA1.cpp
robots/src/A1/control/: A1LocalPlanner.cpp  A1WBIC.cpp
robots/src/A1/interfaces/: A1GazeboInterface.cpp
robots/src/A1/state_estimation/: A1StateEstimator.cpp
state_estimation/: CMakeLists.txt
state_estimation/include/state_estimation/: KalmanFilterObserver.hpp  SlowdownEstimator.hpp
state_estimation/include/state_estimation/A1/: A1StateEstimator.hpp
state_estimation/src/: KalmanFilterObserver.cpp  SlowdownEstimator.cpp
state_estimation/src/A1/: A1StateEstimator.cpp
strelka/: CMakeLists.txt  strelkaConfig.cmake.in
strelka/include/strelka/common/: QuadrupedInterface.hpp  Robot.hpp  constants.hpp  macros.hpp  rotation.hpp  trajectory.hpp  typedefs.hpp  utilities.hpp
strelka/include/strelka/control/: BodyTrajectoryPlanner.hpp  FootholdPlanner.hpp  LocalPlanner.hpp  MPC.hpp  WholeBodyImpulseController.hpp
strelka/include/strelka/filters/: MovingWindowFilter3D.hpp
strelka/include/strelka/nodes/: LocalPlannerNode.hpp  MoveToInterface.hpp  StateEstimatorNode.hpp  WBICNode.hpp
strelka/include/strelka/robots/: Robot.hpp  RobotRegistry.hpp  Robots.hpp
strelka/include/strelka/state_estimation/: KalmanFilterObserver.hpp  SlowdownEstimator.hpp
strelka/src/control/: BodyTrajectoryPlanner.cpp  FootholdPlanner.cpp  LocalPlanner.cpp  MPC.cpp  WholeBodyImpulseController.cpp
strelka/src/control/gait/: GaitScheduler.cpp  GaitSequencer.cpp
strelka/src/filters/: FirstOrderLPF.cpp  MovingWindowFilter3D.cpp
strelka/src/nodes/: LocalPlannerNode.cpp  MoveToInterface.cpp  StateEstimatorNode.cpp  WBICNode.cpp
strelka/src/robots/: Robot.cpp  UnitreeA1.cpp
strelka/src/state_estimation/: KalmanFilterObserver.cpp  SlowdownEstimator.cpp
strelka_messages/: CMakeLists.txt  generate_msg_headers.sh
strelka_messages/include/messages/a1_lcm_msgs/: ExternalOdometry.hpp  RobotHighCommand.hpp  WbicCommand.hpp
strelka_messages/include/strelka_messages/: HighLevelCommand.hpp  WBICCommand.hpp
strelka_messages/include/strelka_messages/a1_lcm_msgs/: HighLevelCommand.hpp  RobotGazeboState.hpp  RobotLowCommand.hpp  RobotRawState.hpp  RobotState.hpp  WirelessRemoteState.hpp
strelka_messages/lcm/: external_odometry.lcm  high_level_command.lcm  robot_gazebo_state.lcm  robot_high_command.lcm  robot_low_command.lcm  robot_raw_state.lcm  robot_state.lcm  wbic_command.lcm  wireless_remote_state.lcm
strelka_robots/: CMakeLists.txt
strelka_robots/include/strelka_robots/: LocalPlannerNode.hpp  WBICNode.hpp
strelka_robots/include/strelka_robots/A1/: UnitreeA1.hpp  constants.hpp  kinematics.hpp
strelka_robots/src/: A1GazeboInterface.cpp  A1LocalPlanner.cpp  A1StateEstimator.cpp  A1WBIC.cpp  LocalPlannerNode.cpp  UnitreeA1.cpp  WBICNode.cpp
strelka_robots/src/A1/: UnitreeA1.cpp
strelka_robots/src/A1/control/: A1LocalPlanner.cpp  A1WBIC.cpp
strelka_robots/src/A1/interfaces/: A1GazeboInterface.cpp
strelka_robots/src/A1/state_estimation/: A1StateEstimator.cpp
tests/: CMakeLists.txt
tests/src/: test_gazebo_interface.cpp
tests/src/control/: body_planner_test.cpp  foothold_planner_test.cpp  gait_scheduler_test.cpp  test_a1_wbic.cpp  test_body_planner.cpp  test_foothold_planner.cpp  test_gait_scheduler.cpp  test_lcm_wbic.cpp  test_local_planner.cpp  test_mpc.cpp  test_wbic.cpp  test_wbic_dummy_data.cpp
tests/src/interfaces/: gazebo_interface_test.cpp  moveto_interface_test.cpp  test_gazebo_interface.cpp
tests/src/state_estimation/: a1_ik_test.cpp  kalman_observer_test.cpp  test_a1_ik.cpp  test_a1_state_estimator.cpp  test_kalman_observer.cpp  test_lcm_state_estimator.cpp
(+61 files in other folders)
