printPackageHeader(interfaces)

SET(STRELKA_INTERFACES_DEPENDENCY_INCLUDE_DIRS 
    ${Eigen_INCLUDE_DIRS};
    ${STRELKA_MESSAGES_INCLUDE_DIRS};
    ${STRELKA_COMMON_INCLUDE_DIRS};
)

FILE(GLOB_RECURSE STRELKA_INTERFACES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

add_library(strelka_interfaces ${STRELKA_INTERFACES_SOURCES})
target_include_directories(strelka_interfaces PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${STRELKA_INTERFACES_DEPENDENCY_INCLUDE_DIRS})
target_link_libraries(strelka_interfaces lcm)


set(STRELKA_INTERFACES_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    PARENT_SCOPE
)