PrintPackageHeader(robots)

SET(STRELKA_ROBOTS_DEPENDENCY_INCLUDE_DIRS 
    ${Eigen_INCLUDE_DIRS};
    ${STRELKA_MESSAGES_INCLUDE_DIRS};
    ${STRELKA_COMMON_INCLUDE_DIRS};
)

FILE(GLOB_RECURSE STRELKA_ROBOTS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

add_library(strelka_robots ${STRELKA_ROBOTS_SOURCES})
target_include_directories(strelka_robots PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${STRELKA_ROBOTS_DEPENDENCY_INCLUDE_DIRS})

set(STRELKA_ROBOTS_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    PARENT_SCOPE
)
