PrintPackageHeader(robots)

SET(STRELKA_ROBOTS_DEPENDENCY_INCLUDE_DIRS 
    ${Eigen_INCLUDE_DIRS};
    ${STRELKA_MESSAGES_INCLUDE_DIRS};
    ${STRELKA_COMMON_INCLUDE_DIRS};
    ${STRELKA_CONTROL_INCLUDE_DIRS};
    ${STRELKA_INTERFACES_INCLUDE_DIRS};
    ${STRELKA_STATE_ESTIMATION_INCLUDE_DIRS};
    
)

SET(STRELKA_ROBOTS_DEPENDENCY_LIBRARIES 
    strelka_control 
    strelka_state_estimation
    lcm
)

FILE(GLOB_RECURSE STRELKA_ROBOTS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

add_library(strelka_robots ${STRELKA_ROBOTS_SOURCES})
target_include_directories(strelka_robots PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${STRELKA_ROBOTS_DEPENDENCY_INCLUDE_DIRS})
target_link_libraries(strelka_robots PUBLIC ${STRELKA_ROBOTS_DEPENDENCY_LIBRARIES} )
set(STRELKA_ROBOTS_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    PARENT_SCOPE
)
